mp5/nightly.txt
Compilation Results:
********************
prog5.c: In function ‘set_seed’:
prog5.c:93:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
prog5.c: In function ‘make_guess’:
prog5.c:134:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
prog5.c: In function ‘set_seed’:
prog5.c:93:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
prog5.c: In function ‘make_guess’:
prog5.c:134:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
